# multi-agent-compute-os

./: .gitignore  Dockerfile  LICENSE  MACOS_Training.ipynb  README.md  inference.py  learning_curve.npy  llm_inference.py  llm_inference.py.backup  llm_showcase.py  model_metadata.json  openenv.yaml  pyproject.toml  requirements.txt  test_trained_model.py  train_colab.py  train_grpo.py  train_kaggle.py  visualize_results.py
api/: server.py
env/: auditor.py  core.py  grader.py  gym_env.py  models.py  simulator.py  tasks.py  text_wrapper.py
macos-llm-clean/: README.md  adapter_config.json  model_metadata.json
macos-llm-clean/checkpoint-150/: rng_state.pth  scheduler.pt  trainer_state.json
macos-llm-clean/checkpoint-200/: rng_state.pth  scheduler.pt  trainer_state.json
macos-llm-clean/checkpoint-250/: rng_state.pth  scheduler.pt  trainer_state.json
macos-llm-grpo/: model_metadata.json
macos-llm-grpo/checkpoint-100/: adapter_config.json  rng_state.pth  scheduler.pt  trainer_state.json
macos-llm-grpo/checkpoint-125/: rng_state.pth  trainer_state.json
macos-llm-grpo/checkpoint-50/: rng_state.pth  scheduler.pt  trainer_state.json
scripts/: validate-submission.sh
server/: app.py
visualizations/: RESULTS_SUMMARY.md
